--- a/UWS-Common.csproj
+++ b/UWS-Common.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>ArcelorMittal.UnifiedWeightSystem.Common</RootNamespace>
         <AssemblyName>UWS-Common</AssemblyName>
-        <Version>1.1.2</Version>
+        <Version>1.1.3</Version>
         <Authors>fdeluca</Authors>
         <Company>ArcelorMittal</Company>
         <Product>Unified Weighting System</Product>
@@ -17,6 +17,10 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties\" />
     </ItemGroup>
 
 </Project>
