--- a/uniwes-lib.csproj
+++ b/uniwes-lib.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>ArcelorMittal.UnifiedWeightSystem.Common</RootNamespace>
-        <AssemblyName>ArcelorMittal.UnifiedWeightSystem.Common</AssemblyName>
+        <AssemblyName>uniwes-lib</AssemblyName>
         <Version>1.4.0</Version>
         <Authors>fdeluca</Authors>
         <Company>ArcelorMittal</Company>
@@ -43,6 +43,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.4" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.4" />
+        <PackageReference Include="NLog" Version="4.7.2" />
     </ItemGroup>
 
     <ItemGroup>
